--- a/protocol/meson.build
+++ b/protocol/meson.build
@@ -1,20 +1,21 @@
 if wayland_scanner.found()
-    prog_wayland_scanner = find_program(wayland_scanner.get_pkgconfig_variable('wayland_scanner'))
+    prog_wayland_scanner = find_program(wayland_scanner.get_variable(pkgconfig: 'wayland_scanner'))
 else
     prog_wayland_scanner = find_program('wayland-scanner')
 endif
 
 protocols = [
-    'wlr-layer-shell-unstable-v1.xml'
+    'wlr-layer-shell-unstable-v1.xml',
+    join_paths(
+        wayland_protocols.get_variable(pkgconfig: 'pkgdatadir'),
+        'stable/xdg-shell/xdg-shell.xml'),
+    join_paths(
+        wayland_protocols.get_variable(pkgconfig: 'pkgdatadir'),
+        'staging/ext-session-lock/ext-session-lock-v1.xml'),
 ]
 
-if wayland_protocols.found()
-    protocols += join_paths(
-        wayland_protocols.get_pkgconfig_variable('pkgdatadir'),
-        'stable/xdg-shell/xdg-shell.xml')
-else
-    # use bundled xdg-shell.xml
-    protocols += 'xdg-shell.xml'
+if get_option('tests')
+    protocols += 'xdg-dialog-v1.xml'
 endif
 
 gen_client_header = generator(prog_wayland_scanner,
@@ -27,16 +28,17 @@ gen_server_header = generator(prog_wayland_scanner,
 
 gen_private_code = generator(prog_wayland_scanner,
     output: ['@BASENAME@.c'],
-    arguments: ['-c', 'code', '@INPUT@', '@BUILD_DIR@/@BASENAME@.c'])
-# 'code' is deprecated, and can be replaced with 'private-code' when all platforms have a new enough wayland-scanner
+    arguments: ['-c', 'private-code', '@INPUT@', '@BUILD_DIR@/@BASENAME@.c'])
 
 client_protocol_srcs = []
 server_protocol_srcs = []
 
 foreach protocol : protocols
     client_header = gen_client_header.process(protocol)
-    server_header = gen_server_header.process(protocol)
     code = gen_private_code.process(protocol)
     client_protocol_srcs += [client_header, code]
-    server_protocol_srcs += [server_header, code]
+    if get_option('tests')
+        server_header = gen_server_header.process(protocol)
+        server_protocol_srcs += [server_header, code]
+    endif
 endforeach
