Add more monitor change tests

--- a/test/integration-tests/meson.build
+++ b/test/integration-tests/meson.build
@@ -40,4 +40,6 @@ integration_tests = [
     'test-immediate-close',
     'test-closed-before-configure',
     'test-monitor-change-closed-before-configure',
+    'test-rapid-monitor-changes',
+    'test-monitor-change-during-configure-wait',
 ]
